@@ -1,3 +1,6 @@
+[B][COLOR gold]v4.00.33[/COLOR][/B]
+- Subtitles fix for Kodi 19
+
 [B][COLOR gold]v4.00.32[/COLOR][/B]
 - Changes to the settings cleaning function
 
